--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Shopify Business Blueprint</title><link rel="icon" type="image/x-icon/png" href="Shopify%20Business%20Blueprint%5ca5d8dc03e5474f886dbd74df55462f/icons8-online-shop-50.png"><style>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>Shopify Business Blueprint</title><link rel="icon" type="image/x-icon/png" href="Shopify Business Blueprint 5ca5d8dc03e5474f886dbd74df55462f/icons8-online-shop-50.png"><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
 html {
